# static-xml

./: Cargo.toml  README.md
.github/workflows/: ci.yml
static-xml/: Cargo.toml
static-xml-derive/: Cargo.toml
static-xml-derive/src/: common.rs  deserialize.rs  lib.rs  parse.rs  serialize.rs  to_text.rs
static-xml-derive/tests/: test.rs
static-xml-derive/tests/ui/: field-not-parsetext.rs  field-not-parsetext.stderr
static-xml/src/: lib.rs  value.rs
static-xml/src/de/: mod.rs  store.rs
static-xml/src/ser/: mod.rs
test-suite/: Cargo.toml
test-suite/tests/: basic.rs  element_enum.rs
