[package]
name = "static-xml-derive"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/scottlamb/static-xml/"
license = "MIT/Apache-2.0"
keywords = ["serde", "xml", "serialization"]
categories = ["encoding"]
description = "derive macros for static-xml crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
static-xml = { path = "../static-xml" }
quote = "1.0"
syn = "1.0"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0.71"
