[package]
name = "test-suite"
version = "0.1.0"
edition = "2021"
publish = false
readme = "../README.md"
repository = "https://github.com/scottlamb/static-xml/"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static-xml = { path = "../static-xml" }
static-xml-derive = { path = "../static-xml-derive" }

[dev-dependencies]
env_logger = "0.9.0"
log = "0.4.14"
